Solucionando issues de sonarcloud para cumplir con los quality gates